--- a/first website/Jsdemo.html
+++ b/first website/Jsdemo.html
@@ -12,6 +12,9 @@
     <button onclick="document.getElementById('demo').innerHTML = Date()">show date</button>
     <button onclick="document.getElementById('demo').innerHTML = myFunction(5,6)">multiply</button>
 
+    <button onclick="document.getElementById('demo').innerHTML = ValidteEmail('abdul@gmail.com')">Validate email</button>
+
+
     <p id="demo">todays date is </p>
 
     <script src="./js/first.js"></script>
