--- a/first website/Jsdemo.html
+++ b/first website/Jsdemo.html
@@ -11,6 +11,7 @@
 <body>
     <button onclick="document.getElementById('demo').innerHTML = Date()">show date</button>
     <button onclick="document.getElementById('demo').innerHTML = myFunction(5,6)">multiply</button>
+    <input  type="text" id="emailfield" />
 
     <button onclick="document.getElementById('demo').innerHTML = ValidteEmail('abdul@gmail.com')">Validate email</button>
 
